# PyGVAS

./: .editorconfig  .gitignore  cli.py  gvas.py  pyproject.toml
.github/: copilot-instructions.md
abf/: __init__.py  __main__.py  _definitions.py  _headers.py  _items.py  _maths.py  _objects.py  _saves.py  _utils.py
abf/basepreset/: __main__.py  _presets.py
abf/pickup/: __main__.py
abf/playerpreset/: __main__.py  _presets.py
abf/preset/: __main__.py  _constants.py  _door.py  _player.py  _world.py
abf/reroute/: __main__.py
abf/unlockdoor/: __main__.py
bob/: __main__.py
es/: __main__.py  _headers.py
gvas/: __init__.py  _base.py  headers.py  utils.py  versions.py
gvas/properties/: __init__.py  _arrays.py  _base.py  _bools.py  _bytes.py  _doubles.py  _enums.py  _floats.py  _int64s.py  _ints.py  _maps.py  _names.py  _objects.py  _sets.py  _shorts.py  _soft_objects.py  _strs.py  _structs.py  _texts.py
gvas/tests/: __main__.py  _utils.py
gvas/v2/properties/: __init__.py  _arrays.py  _base.py  _bools.py  _enums.py  _floats.py  _int64s.py  _ints.py  _maps.py  _names.py  _objects.py  _soft_objects.py  _strs.py  _structs.py
gvas/v3/: headers.py  versions.py
gvas/v3/properties/: __init__.py  _arrays.py  _base.py  _bools.py  _bytes.py  _doubles.py  _enums.py  _floats.py  _int64s.py  _ints.py  _maps.py  _names.py  _objects.py  _sets.py  _soft_objects.py  _strs.py  _structs.py  _texts.py
gvas/values/: __init__.py  _base.py  _structs.py  _texts.py
