[project]
name = "PyGVAS"
version = "0.0.0"
requires-python = ">=3.13"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["A", "COM", "N", "I", "Q", "RET", "RSE", "S", "SIM", "SLOT", "TC", "PTH"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
lines-after-imports = 2
